--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,15 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#"><i class="fa fa-glass"></i></a>
+		</div>
+	</div>
+</nav>
 
 {{outlet}}
