--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,13 +1,18 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bartender-navbar-collapse">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><i class="fa fa-glass"></i></a>
+			<a class="navbar-brand" href="#"><i class="fa fa-glass"></i> <small>bartender</small></a>
+		</div>
+		<div class="collapse navbar-collapse" id="bartender-navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li class="action"><a>Home</a></li>
+			</ul>
 		</div>
 	</div>
 </nav>
