build beverage model, model returns a hash now

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
-{{select-2 content=model value=selectedIngredients multiple=true optionValuePath='id' placeholder="Choose ingredients"}}
+{{select-2 content=model.ingredients value=selectedIngredients multiple=true optionValuePath='id' placeholder="Choose ingredients"}}
 <ul>
-{{#each ingredient in model}}
+{{#each ingredient in model.ingredients}}
 	<li>{{ingredient.name}}</li>
 {{/each}}
 </ul>
