--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,11 +7,11 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#"><i class="fa fa-glass"></i> <small>bartender</small></a>
+			{{#link-to 'application' class="navbar-brand"}}<i class="fa fa-glass"></i> <small>bartender</small>{{/link-to}}
 		</div>
 		<div class="collapse navbar-collapse" id="bartender-navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="action"><a>Home</a></li>
+				<li class="action">{{#link-to 'beverage'}}drinks{{/link-to}}</li>
 			</ul>
 		</div>
 	</div>
