--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			{{#link-to 'application' class="navbar-brand"}}<i class="fa fa-glass"></i> <small>bartender</small>{{/link-to}}
+			{{#link-to 'index' class="navbar-brand"}}<i class="fa fa-glass"></i> <small>bartender</small>{{/link-to}}
 		</div>
 		<div class="collapse navbar-collapse" id="bartender-navbar-collapse">
 			<ul class="nav navbar-nav">
