pie-chart is working

--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -4,5 +4,4 @@
 {{/each}}
 <hr>
 <h3>Liquid Contents</h3>
-<section id="pie-chart"></section>
-{{liquid-content}}
+{{liquid-content data=model.combined}}
