--- a/app/templates/beverage/index.hbs
+++ b/app/templates/beverage/index.hbs
@@ -1,3 +1,3 @@
 {{#each beverage in model}}
-	{{#link-to 'beverage.view' beverage.id}}{{beverage.name}}{{/link-to}}
+	{{#link-to 'beverage.view' beverage.id}}{{beverage.name}}{{/link-to}}<br>
 {{/each}}
