--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -4,6 +4,9 @@
 		{{#each ingredient in model.combined}}
 			<span class="badge">{{ingredient.amount}} {{ingredient.measurement}}</span> {{ingredient.name}}<br>
 		{{/each}}
+		<h3>Glassware</h3>
+		{{test}}<br>
+		!! {{model.equipment.name}}
 	</div>
 	<div class="col-md-6">
 		<h3>Steps</h3>
