--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -4,9 +4,6 @@
 		{{#each ingredient in model.combined}}
 			<span class="badge">{{ingredient.amount}} {{ingredient.measurement}}</span> {{ingredient.name}}<br>
 		{{/each}}
-		<h3>Glassware</h3>
-		{{test}}<br>
-		!! {{model.equipment.name}}
 	</div>
 	<div class="col-md-6">
 		<h3>Steps</h3>
@@ -18,8 +15,14 @@
 	</div>
 </div>
 <div class="row">
-	<hr>
-	<h3>Liquid Contents</h3>
-	{{liquid-content data=model.combined}}
+	<div class="col-md-6">
+		<hr>
+		<h3>Liquid Contents</h3>
+		{{liquid-content data=model.combined}}
+	</div>
+	<div class="col-md-6">
+		<h3>Glassware</h3>
+		<img src={{model.equipment.image}} width=300>
+	</div>
 </div>
 	
