add ingredients and equipment routes

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,6 +12,8 @@
 		<div class="collapse navbar-collapse" id="bartender-navbar-collapse">
 			<ul class="nav navbar-nav">
 				<li class="action">{{#link-to 'beverage'}}drinks{{/link-to}}</li>
+				<li class="action">{{#link-to 'ingredient'}}ingredients{{/link-to}}</li>
+				<li class="action">{{#link-to 'equipment'}}equipment{{/link-to}}</li>
 			</ul>
 		</div>
 	</div>
