primitive search implementation

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,3 +5,7 @@
 {{#each ingredient in selectedIngredients}}
 	{{ingredient}}
 {{/each}}
+
+{{#each beverage in availableBeverages}}
+	{{beverage.name}}
+{{/each}}
