set up basic listing and viewing of ingredients and equipment

--- a/app/templates/equipment/view.hbs
+++ b/app/templates/equipment/view.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<div class="row">
+	<div class="col-md-12">
+		<h2>{{model.name}}<br></h2>
+		<img src={{model.image}} width=400>
+	</div>
+</div>
+	
