--- a/app/templates/ingredient/index.hbs
+++ b/app/templates/ingredient/index.hbs
@@ -1,3 +1,7 @@
+<ol class="breadcrumb">
+  <li>{{#link-to 'application'}}<i class="fa fa-glass"></i>{{/link-to}}</li>
+  <li class="active">ingredients</li>
+</ol>
 {{#each ingredient in model}}
 	{{#link-to 'ingredient.view' ingredient.id}}{{ingredient.name}}{{/link-to}}<br>
 {{/each}}
