--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -1,3 +1,8 @@
+<ol class="breadcrumb">
+  <li>{{#link-to 'application'}}<i class="fa fa-glass"></i>{{/link-to}}</li>
+  <li>{{#link-to 'beverage'}}beverages{{/link-to}}</li>
+  <li class="active">{{model.name}}</li>
+</ol>
 <div class="row">
 	<div class="col-md-6">
 		<h2>{{model.name}}<br></h2>
