--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,23 +1,17 @@
-<nav class="navbar navbar-default">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bartender-navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			{{#link-to 'index' class="navbar-brand"}}<i class="fa fa-glass"></i> <small>bartender</small>{{/link-to}}
-		</div>
-		<div class="collapse navbar-collapse" id="bartender-navbar-collapse">
-			<ul class="nav navbar-nav">
-				<li class="action">{{#link-to 'beverage'}}drinks{{/link-to}}</li>
-				<li class="action">{{#link-to 'ingredient'}}ingredients{{/link-to}}</li>
-				<li class="action">{{#link-to 'equipment'}}equipment{{/link-to}}</li>
+
+<div class="navbar-fixed">
+	<nav>
+		<div class="nav-wrapper">
+			{{#link-to 'index' class="brand-logo"}}<i class="fa fa-glass"> <small>bartender</small></i>{{/link-to}}
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li>{{#link-to 'beverage'}}drinks{{/link-to}}</li>
+				<li>{{#link-to 'ingredient'}}ingredients{{/link-to}}</li>
+				<li>{{#link-to 'equipment'}}equipment{{/link-to}}</li>
 			</ul>
 		</div>
-	</div>
-</nav>
+	</nav>
+</div>
+
 <div class="container">
 	{{outlet}}
 </div>
