--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -6,9 +6,16 @@
 <div class="row">
 	<div class="col-md-6">
 		<h2>{{model.name}}<br></h2>
+		<ul class="collection">
 		{{#each ingredient in model.combined}}
-			<span class="badge">{{ingredient.amount}} {{ingredient.measurement}}</span> {{ingredient.name}}<br>
+			<li class="collection-item">
+				{{#materialize-badge class="red lighten-4"}}
+					{{ingredient.amount}} {{ingredient.measurement}}
+				{{/materialize-badge}}
+				{{ingredient.name}}
+			</li>
 		{{/each}}
+		</ul>
 	</div>
 	<div class="col-md-6">
 		<h3>Steps</h3>
