--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,6 @@
-
 <div class="navbar-fixed">
-	<nav>
-		<div class="nav-wrapper">
+	<nav role="navigation" class="blue">
+		<div class="nav-wrapper container">
 			{{#link-to 'index' class="brand-logo"}}<i class="fa fa-glass"> <small>bartender</small></i>{{/link-to}}
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li>{{#link-to 'beverage'}}drinks{{/link-to}}</li>
