--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -1,15 +1,17 @@
-<ol class="breadcrumb">
-  <li>{{#link-to 'application'}}<i class="fa fa-glass"></i>{{/link-to}}</li>
-  <li>{{#link-to 'beverage'}}beverages{{/link-to}}</li>
-  <li class="active">{{model.name}}</li>
-</ol>
 <div class="row">
-	<div class="col-md-6">
-		<h2>{{model.name}}<br></h2>
+	<div class="col s12">
+		<h3>{{model.name}}</h3>
+		{{#if model.description}}{{model.description}}{{/if}}
+		<hr>
+	</div>
+</div>
+<div class="row">
+	<div class="col s6">
+		<h5>Ingredients</h5>
 		<ul class="collection">
 		{{#each ingredient in model.combined}}
 			<li class="collection-item">
-				{{#materialize-badge class="red lighten-4"}}
+				{{#materialize-badge class="blue lighten-4"}}
 					{{ingredient.amount}} {{ingredient.measurement}}
 				{{/materialize-badge}}
 				{{ingredient.name}}
@@ -17,23 +19,20 @@
 		{{/each}}
 		</ul>
 	</div>
-	<div class="col-md-6">
-		<h3>Steps</h3>
-		<ol>
+	<div class="col s6">
+		<h5>Steps</h5>
+		<ol class="collection">
 		{{#each step in model.steps}}
-			<li>{{step}}</li>
+			<li class="collection-item">{{step}}</li>
 		{{/each}}
 		</ol>
 	</div>
 </div>
 <div class="row">
-	<div class="col-md-6">
-		<hr>
-		<h3>Liquid Contents</h3>
+	<div class="col s6">
 		{{liquid-content data=model.combined}}
 	</div>
-	<div class="col-md-6">
-		<h3>Glassware</h3>
+	<div class="col s6">
 		<img src={{model.equipment.image}} width=300>
 	</div>
 </div>
