--- a/app/templates/loading.hbs
+++ b/app/templates/loading.hbs
@@ -1,1 +1,3 @@
-{{materialize-loader mode="circular" color="red"}}
+<div class="center-align">
+	{{materialize-loader mode="circular" color="red"}}
+</div>
