--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,10 @@
+// Example app.scss 
+@import 'components/color';
+@import 'components/variables';
+ 
+// Custom color settings go here 
+$primary-color: color("blue", "lighten-2");
+
 @import 'materialize';
 
 /* FIXME: Workaround for https://github.com/Dogfalo/materialize/issues/1079 */
@@ -5,4 +12,28 @@
   .#{$mdi-prefix}#{$mdi-icon-name}:before {
     content: "\""+ $mdi-icon-value +"\"";
   }
+}
+
+html,
+body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+footer {
+	width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
+#content {
+	padding-bottom:100px;   /* Height of the footer element */
+}
+
+#wrapper {
+	min-height:100%;
+	position:relative;
 }
