--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -1,7 +1,9 @@
 <div class="row">
 	<div class="col s12">
 		<h3>{{model.name}}</h3>
-		{{#if model.description}}{{model.description}}{{/if}}
+		{{#if model.description}}
+			<p class="flow-text">{{model.description}}</p>
+		{{/if}}
 		<hr>
 	</div>
 </div>
