add side nav for mobile devices

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,6 +8,12 @@
 					<li>{{#link-to 'ingredient'}}ingredients{{/link-to}}</li>
 					<li>{{#link-to 'equipment'}}equipment{{/link-to}}</li>
 				</ul>
+				<ul id="slide-out" class="side-nav">
+					<li>{{#link-to 'beverage'}}drinks{{/link-to}}</li>
+					<li>{{#link-to 'ingredient'}}ingredients{{/link-to}}</li>
+					<li>{{#link-to 'equipment'}}equipment{{/link-to}}</li>
+				</ul>
+				<a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 			</div>
 		</nav>
 	</div>
