--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -8,7 +8,7 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col s6">
+	<div class="col m6 s12">
 		<h5>Ingredients</h5>
 		<ul class="collection">
 		{{#each ingredient in model.combined}}
@@ -21,7 +21,7 @@
 		{{/each}}
 		</ul>
 	</div>
-	<div class="col s6">
+	<div class="col m6 s12">
 		<h5>Steps</h5>
 		<ol class="collection">
 		{{#each step in model.steps}}
@@ -31,10 +31,10 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col s6">
-		{{liquid-content data=model.combined}}
+	<div class="col m6 s12">
+		{{liquid-content data=model.combined height=350 width=350 radius=175}}
 	</div>
-	<div class="col s6">
+	<div class="col m6 s12">
 		<img src={{model.equipment.image}} width=300>
 	</div>
 </div>
