--- a/app/templates/equipment/index.hbs
+++ b/app/templates/equipment/index.hbs
@@ -1,6 +1,7 @@
 <ul class="collection">
 	{{#each equipment in model}}
 		{{#link-to 'equipment.view' equipment.id class="collection-item"}}
+			<span class="badge blue lighten-4">{{equipment.type}}</span>
 			{{equipment.name}}
 		{{/link-to}}
 	{{/each}}
