--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,11 +7,13 @@
 					<li>{{#link-to 'beverage'}}drinks{{/link-to}}</li>
 					<li>{{#link-to 'ingredient'}}ingredients{{/link-to}}</li>
 					<li>{{#link-to 'equipment'}}equipment{{/link-to}}</li>
+					<li>{{#link-to 'about'}}about{{/link-to}}</li>
 				</ul>
 				<ul id="slide-out" class="side-nav">
 					<li>{{#link-to 'beverage'}}drinks{{/link-to}}</li>
 					<li>{{#link-to 'ingredient'}}ingredients{{/link-to}}</li>
 					<li>{{#link-to 'equipment'}}equipment{{/link-to}}</li>
+					<li>{{#link-to 'about'}}about{{/link-to}}</li>
 				</ul>
 				<a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 			</div>
@@ -22,7 +24,7 @@
 		{{outlet}}
 	</div>
 
-	<footer class="page-footer" class="blue lighten-2">
+{{!-- 	<footer class="page-footer" class="blue lighten-2">
 		<div class="container">
 			<div class="row">
 				<div class="col l6 s12">
@@ -40,5 +42,5 @@
 				<a href="https://github.com/adamsrog/bartender" target="_blank" class="grey-text text-lighten-4 right">github</a>
 			</div>
 		</div>
-	</footer>
+	</footer> --}}
 </div>
