--- a/app/templates/ingredient/view.hbs
+++ b/app/templates/ingredient/view.hbs
@@ -1,6 +1,9 @@
 <div class="row">
 	<div class="col s12">
-		<h2>{{model.name}}</h2>
+		<h3>{{model.name}}</h3>
+		{{#if model.description}}
+			<p class="flow-text">{{model.description}}</p>
+		{{/if}}
+		<hr>
 	</div>
 </div>
-	
