--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row" style="padding-top: 10px">
 	<div class="col s12 m6">
-		<div class="card medium">
+		<div class="card medium center-align">
 			<div class="center-align" style="padding-top: 15px">
 				<p class="flow-text">Roger Adams</p>
 			</div>
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="col s12 m6">
-		<div class="card medium">
+		<div class="card medium center-align">
 			<div class="center-align" style="padding-top: 15px">
 				<img src="images/about/ember.png">
 			</div>
@@ -34,7 +34,7 @@
 
 <div class="row">
 	<div class="col s12 m6">
-		<div class="card medium">
+		<div class="card medium center-align">
 			<div class="center-align">
 				<div id="showcase">
 					<div class="content">
@@ -52,7 +52,7 @@
 	</div>
 
 	<div class="col s12 m6">
-		<div class="card medium">
+		<div class="card medium center-align">
 			<div class="center-align">
 				<img src="images/about/d3.png">
 			</div>
