--- a/app/templates/equipment/index.hbs
+++ b/app/templates/equipment/index.hbs
@@ -1,5 +1,11 @@
+<div class="row">
+	<div class="col s12 m4">
+		{{materialize-input value=searchQuery label="Search by equipment name" icon="mdi-action-search"}}
+	</div>
+</div>
+
 <ul class="collection">
-	{{#each equipment in model}}
+	{{#each equipment in filteredList}}
 		{{#link-to 'equipment.view' equipment.id class="collection-item"}}
 			<span class="badge blue lighten-4">{{equipment.type}}</span>
 			{{equipment.name}}
