--- a/app/templates/beverage/index.hbs
+++ b/app/templates/beverage/index.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col s12 m4">
+	<div class="col s12 m4 offset-m8">
 		{{materialize-input value=searchQuery label="Search by beverage name" icon="mdi-action-search"}}
 	</div>
 </div>
