--- a/app/templates/ingredient/index.hbs
+++ b/app/templates/ingredient/index.hbs
@@ -1,6 +1,6 @@
 <div class="row">
-	<div class="col s12 m4">
-		{{materialize-input value=searchQuery label="Search by equipment name" icon="mdi-action-search"}}
+	<div class="col s12 m4 offset-m8">
+		{{materialize-input value=searchQuery label="Search by ingredient name" icon="mdi-action-search"}}
 	</div>
 </div>
 
