--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,7 +3,7 @@
 @import 'components/variables';
  
 // Custom color settings go here 
-$primary-color: color("blue", "lighten-2");
+$primary-color: color("green", "darken-1");
 $primary-color-light: false !default;
 $primary-color-dark: false !default;
 @if not $primary-color-light {
@@ -12,7 +12,7 @@ $primary-color-dark: false !default;
 @if not $primary-color-dark {
   $primary-color-dark: darken($primary-color, 15%);
 }
-$secondary-color: color("blue", "lighten-1") !default;
+$secondary-color: color("green") !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
