--- a/app/templates/equipment/index.hbs
+++ b/app/templates/equipment/index.hbs
@@ -1,5 +1,8 @@
 <div class="row">
-	<div class="col s12 m4 offset-m8">
+	<div class="col s12 m8">
+		<h3>Equipment</h3>
+	</div>
+	<div class="col s12 m4">
 		{{materialize-input value=searchQuery label="Search by equipment name" icon="mdi-action-search"}}
 	</div>
 </div>
