restyle the loading template

--- a/app/templates/loading.hbs
+++ b/app/templates/loading.hbs
@@ -1,3 +1,14 @@
-<div class="center-align">
-	{{materialize-loader mode="circular" color="red"}}
+<div class="row" style="padding-top: 10px">
+	<div class="col s12">
+		<div class="center-align">
+			<div class="center-align" style="padding-top: 25px">
+				<p class="flow-text">loading...</p>
+			</div>
+			<div class="card-content center-align">
+				<div class="center-align">
+					{{materialize-loader mode="circular" color="green"}}
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
