fix broken images, add more

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -20,7 +20,7 @@
 	<div class="col s12 m6">
 		<div class="card medium center-align">
 			<div class="center-align" style="padding-top: 15px">
-				<img src="images/about/ember.png">
+				<img src="assets/images/about/ember.png">
 			</div>
 			<div class="card-content center-align">
 				<p class="flow-text">A framework for creating<br><strong>ambitious</strong> web applications.</p>
@@ -54,7 +54,7 @@
 	<div class="col s12 m6">
 		<div class="card medium center-align">
 			<div class="center-align">
-				<img src="images/about/d3.png">
+				<img src="assets/images/about/d3.png">
 			</div>
 			<div class="card-content center-align">
 				<p class="flow-text">Data-Driven Documents</p>
@@ -70,7 +70,7 @@
 	<div class="col s12 m6">
 		<div class="card medium center-align">
 			<div class="center-align" style="padding-top: 40px">
-				<img src="images/about/firebase.png">
+				<img src="assets/images/about/firebase.png">
 			</div>
 			<div class="card-content center-align">
 				<h3>Build Realtime Apps</h3>
