--- a/app/templates/beverage/view.hbs
+++ b/app/templates/beverage/view.hbs
@@ -35,7 +35,7 @@
 		{{liquid-content data=model.combined height=350 width=350 radius=175}}
 	</div>
 	<div class="col m6 s12">
-		<img src={{model.equipment.image}} width=300>
+		<img class="responsive-img" src={{model.equipment.image}}>
 	</div>
 </div>
 	
