--- a/app/templates/equipment/view.hbs
+++ b/app/templates/equipment/view.hbs
@@ -1,7 +1,13 @@
 <div class="row">
-	<div class="col-md-12">
+	<div class="col s12">
 		<h2>{{model.name}}<br></h2>
-		<img src={{model.image}} width=400>
+	</div>
+	<hr>
+	<div class="col s12 m6">
+		<p class="flow-text">{{model.description}}</p>
+	</div>
+	<div class="col s12 m6">
+		<img class="responsive-img" src={{model.image}}>
 	</div>
 </div>
 	
