--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
 	<div class="navbar-fixed">
 		<nav role="navigation">
 			<div class="nav-wrapper container">
-				{{#link-to 'index' class="brand-logo"}}<i class="fa fa-glass"> <small>bartender</small></i>{{/link-to}}
+				{{#link-to 'index' class="brand-logo"}}<i class="mdi-maps-local-bar"> bartender</i>{{/link-to}}
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					{{#link-to 'index' tagName="li"}}<a>home</a>{{/link-to}}
 					{{#link-to 'beverage' tagName="li"}}<a>drinks</a>{{/link-to}}
@@ -26,23 +26,4 @@
 		{{outlet}}
 	</div>
 
-{{!-- 	<footer class="page-footer" class="blue lighten-2">
-		<div class="container">
-			<div class="row">
-				<div class="col l6 s12">
-					<h5 class="white-text"></h5>
-					<p class="grey-text text-lighten-4"></p>
-				</div>
-				<div class="col l4 offset-l2 s12">
-					<h5 class="white-text"></h5>
-				</div>
-			</div>
-		</div>
-		<div class="footer-copyright">
-			<div class="container">
-				<a href="https://twitter.com/rogdev" target="_blank" class="grey-text text-lighten-4">@rogdev</a>
-				<a href="https://github.com/adamsrog/bartender" target="_blank" class="grey-text text-lighten-4 right">github</a>
-			</div>
-		</div>
-	</footer> --}}
 </div>
