--- a/app/templates/equipment/index.hbs
+++ b/app/templates/equipment/index.hbs
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col s12 m8">
-		<h3>Equipment</h3>
+		<h3>Equipment <small>{{#link-to 'equipment.new' class="btn-floating waves-effect waves-light green"}}<i class="mdi-content-add"></i>{{/link-to}}</small></h3>
 	</div>
 	<div class="col s12 m4">
 		{{materialize-input value=searchQuery label="Search by equipment name" icon="mdi-action-search"}}
@@ -10,7 +10,7 @@
 <ul class="collection">
 	{{#each equipment in filteredList}}
 		{{#link-to 'equipment.view' equipment.id class="collection-item"}}
-			<span class="badge blue lighten-4">{{equipment.type}}</span>
+			<span class="badge green lighten-4">{{equipment.type}}</span>
 			{{equipment.name}}
 		{{/link-to}}
 	{{/each}}
