--- a/app/templates/ingredient/index.hbs
+++ b/app/templates/ingredient/index.hbs
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col s12 m8">
-		<h3>Ingredients</h3>
+		<h3>Ingredients <small>{{#link-to 'ingredient.new' class="btn-floating waves-effect waves-light green"}}<i class="mdi-content-add"></i>{{/link-to}}</small></h3>
 	</div>
 	<div class="col s12 m4">
 		{{materialize-input value=searchQuery label="Search by ingredient name" icon="mdi-action-search"}}
@@ -10,7 +10,7 @@
 <ul class="collection">
 	{{#each ingredient in filteredList}}
 		{{#link-to 'ingredient.view' ingredient.id class="collection-item"}}
-			<span class="badge blue lighten-4">{{ingredient.type}}</span>
+			<span class="badge green lighten-4">{{ingredient.type}}</span>
 			{{ingredient.name}}
 		{{/link-to}}
 	{{/each}}
