--- a/app/templates/ingredient/index.hbs
+++ b/app/templates/ingredient/index.hbs
@@ -1,6 +1,13 @@
 <div class="row">
 	<div class="col s12 m8">
-		<h3>Ingredients <small>{{#link-to 'ingredient.new' class="btn-floating waves-effect waves-light green"}}<i class="mdi-content-add"></i>{{/link-to}}</small></h3>
+		<h4>
+			Ingredients
+			<small>
+				{{#link-to 'ingredient.new' class="btn-floating waves-effect waves-light green"}}
+					<i class="mdi-content-add"></i>
+				{{/link-to}}
+			</small>
+		</h4>
 	</div>
 	<div class="col s12 m4">
 		{{materialize-input value=searchQuery label="Search by ingredient name" icon="mdi-action-search"}}
