--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -22,12 +22,15 @@
 					{{#if session.isAuthenticated}}
 					<li {{action 'logout'}}><a>logout</a></li>
 					{{else}}
-					<li>
-						<a class="dropdown-button" data-activates="login-dropdown">login<i class="mdi-navigation-arrow-drop-down right"></i></a>
-					</li>
+					<li><a class="dropdown-button" data-activates="login-dropdown">login<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
 					{{/if}}
 				</ul>
 				<ul id="slide-out" class="side-nav">
+					{{#if session.isAuthenticated}}
+					<li {{action 'logout'}}><a>logout</a></li>
+					{{else}}
+					<li><a class="dropdown-button" data-activates="login-dropdown">login<i class="mdi-navigation-arrow-drop-down right"></i></a></li>
+					{{/if}}
 					{{#link-to 'index' tagName="li"}}<a>home</a>{{/link-to}}
 					{{#link-to 'beverage' tagName="li"}}<a>drinks</a>{{/link-to}}
 					{{#link-to 'ingredient' tagName="li"}}<a>ingredients</a>{{/link-to}}
