--- a/app/templates/equipment/new.hbs
+++ b/app/templates/equipment/new.hbs
@@ -1,1 +1,34 @@
-{{outlet}}
+<div class="row">
+	<div class="col s12">
+		<h4>New Equipment</h4>
+	</div>
+	<div class="col s12 m6">
+		{{materialize-input value=equipmentName label="Name"}}
+	</div>
+	<div class="col s12 m6">
+		{{materialize-input value=equipmentId label="ID"}}
+	</div>
+	<div class="col s12 m6">
+		{{materialize-input value=equipmentType label="Type"}}
+	</div>
+	<div class="col s12 m6">
+		{{materialize-input value=equipmentDescription label="Description"}}
+	</div>
+	{{#if error}}
+	<div class="col s12 right-align">
+		<div class="card-panel">
+			<span class="red-text text-darken-2">{{error}}</span>
+		</div>
+	</div>
+	{{/if}}
+	<div class="col s12 right-align">
+		<a class="waves-effect waves-light red darken-2 btn" {{action 'cancel'}}>
+			<i class="mdi-navigation-cancel left"></i>
+			<span class="hide-on-small-only">Cancel</span>
+		</a>
+		<a class="waves-effect waves-light green darken-2 btn" {{action 'saveEquipment'}}>
+			<i class="mdi-content-save left"></i>
+			<span class="hide-on-small-only">Save Equipment</span>
+		</a>
+	</div>
+</div>
