--- a/app/templates/ingredient/index.hbs
+++ b/app/templates/ingredient/index.hbs
@@ -17,7 +17,7 @@
 </div>
 
 <ul class="collection">
-	{{#each ingredient in filteredList}}
+	{{#each filteredList as |ingredient|}}
 		{{#link-to 'ingredient.view' ingredient.id class="collection-item"}}
 			<span class="badge green lighten-4">{{ingredient.type}}</span>
 			{{ingredient.name}}
