--- a/app/templates/ingredient/view.hbs
+++ b/app/templates/ingredient/view.hbs
@@ -7,7 +7,7 @@
 		<hr>
 		{{#if model.equivalents}}
 			<h5>Equivalent Ingredients</h5>
-			{{#each ingredient in model.equivalents}}
+			{{#each model.equivalents as |ingredient|}}
 				{{#link-to 'ingredient.view' ingredient.id}}{{ingredient.name}}{{/link-to}}
 			{{/each}}
 		{{/if}}
