--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,7 @@
-// Example app.scss 
 @import 'components/color';
 @import 'components/variables';
  
-// Custom color settings go here 
+// Custom color settings go here
 $primary-color: color("green", "darken-1");
 $primary-color-light: false !default;
 $primary-color-dark: false !default;
@@ -16,64 +15,6 @@ $secondary-color: color("green") !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
-
+ 
 @import 'materialize';
-
-/* FIXME: Workaround for https://github.com/Dogfalo/materialize/issues/1079 */
-@each $mdi-icon-name, $mdi-icon-value in $mdi-list-icons {
-  .#{$mdi-prefix}#{$mdi-icon-name}:before {
-    content: "\""+ $mdi-icon-value +"\"";
-  }
-}
-
-html,
-body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
-}
-
-footer {
-	width:100%;
-	height:100px;
-	position:absolute;
-	bottom:0;
-	left:0;
-}
-
-#content {
-	padding-bottom:100px;   /* Height of the footer element */
-}
-
-#wrapper {
-	min-height:100%;
-	position:relative;
-}
-
-#showcase .content h1 {
-  font-family: "exolight", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.4em;
-  font-size: 3.5em;
-  color: white;
-  // text-shadow: 0 2px #742416;
-}
-
-#showcase .content h1 span {
-  width: 56px;
-  top: -15px;
-  color: #b3230a;
-  padding: .04em .4em .04em .3em;
-  font-size: .75em;
-  border-bottom: 3px solid #d66f5d;
-  text-shadow: 0 1px white;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  -khtml-border-radius: 7px;
-  border-radius: 7px;
-  background-color: #f9a091;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#f9a091));
-  background-image: -webkit-linear-gradient(top, white, #f9a091);
-  background-image: -moz-linear-gradient(top, white, #f9a091);
-  background-image: -o-linear-gradient(top, white, #f9a091);
-  background-image: linear-gradient(to bottom, white, #f9a091);
-}
+@import 'ember-cli-materialize';
