several form fixes

--- a/app/templates/ingredient/index.hbs
+++ b/app/templates/ingredient/index.hbs
@@ -12,7 +12,7 @@
 		</h4>
 	</div>
 	<div class="col s12 m4">
-		{{materialize-input value=searchQuery label="Search by ingredient name" icon="mdi-action-search"}}
+		{{md-input value=searchQuery label="Search by ingredient name" icon="mdi-action-search"}}
 	</div>
 </div>
 
