--- a/app/templates/ingredient/new.hbs
+++ b/app/templates/ingredient/new.hbs
@@ -3,16 +3,16 @@
 		<h4>New Ingredient</h4>
 	</div>
 	<div class="col s12 m6">
-		{{materialize-input value=ingredientName label="Name"}}
+		{{md-input value=ingredientName label="Name"}}
 	</div>
 	<div class="col s12 m6">
-		{{materialize-input value=ingredientId label="ID"}}
+		{{md-input value=ingredientId label="ID"}}
 	</div>
 	<div class="col s12 m6">
-		{{materialize-input value=ingredientType label="Type"}}
+		{{md-input value=ingredientType label="Type"}}
 	</div>
 	<div class="col s12 m6">
-		{{materialize-input value=ingredientDescription label="Description"}}
+		{{md-input value=ingredientDescription label="Description"}}
 	</div>
 	{{#if error}}
 	<div class="col s12 right-align">
